kubernetes/apps/crowdsec/crowdsec/templates/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: crowdsec-lapi
spec:
  podSelector:
    matchLabels:
      k8s-app: crowdsec
      type: lapi
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              k8s-app: crowdsec
              type: agent
      ports:
        - protocol: TCP
          port: 8080
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: crowdsec-web-ui
              app.kubernetes.io/name: crowdsec-web-ui
      ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 6060
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
      ports:
        - protocol: TCP
          port: 8080
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
      ports:
        - protocol: TCP
          port: 6060
